--- a/public/chat.html
+++ b/public/chat.html
@@ -14,6 +14,7 @@
     <div class="chat-container">
         <header class="chat-header">
             <h1><i class="fas fa-smile"></i> ChatCord</h1>
+            <span class="outputFeedback"></span>
             <a href="index.html" class="btn">Leave Room</a>
         </header>
         <main class="chat-main">
